base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: food-app
  name: food-app
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: food-app
    weight: 100
